# ai-secretary

./: CLAUDE.md  README.md  backlog.md  config.py  proposal.md  pyproject.toml  settings.toml
src/: __init__.py  agent.py  calendar_service.py  calendar_tools.py  mcp_server.py  models.py
src/core/: models.py
src/core/models/: __init__.py  event.py  journal.py  task.py
src/providers/: base.py  caldav.py  caldav_provider.py  calendar_provider.py  event_provider.py  journal_provider.py  task_provider.py
src/providers/caldav/: base.py  calendar_service.py  event_service.py  journal_service.py  task_service.py
src/providers/caldav_services/: calendar_service.py  event_service.py  journal_service.py  task_service.py
src/servers/: calendar_server.py  event_server.py  journal_server.py  task_server.py
src/tools/: calendar_tools.py
src/utils/: date_utils.py  entity_finder_utils.py  icalendar_utils.py  journal_utils.py  timezone_utils.py  validation_utils.py  vcalendar_parser.py
tests/: conftest.py
tests/providers/caldav/: test_journal_service.py  test_journal_service_integration.py
tests/providers/caldav_services/: test_journal_service.py  test_journal_service_integration.py  test_task_service_integration.py  test_task_service_unit.py
tests/utils/: test_date_utils.py  test_entity_finder_utils.py  test_journal_utils.py  test_timezone_utils.py  test_validation_utils.py  test_vcalendar_parser.py
