[project]
name = "secretary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "caldav>=1.6.0",
    "dynaconf>=3.2.11",
    "fastapi>=0.115.13",
    "mcp[cli]>=1.9.4",
    "openai-agents>=0.0.19",
    "radicale",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
]

[tool.uv.sources]
radicale = { url = "https://github.com/Kozea/Radicale/archive/master.tar.gz" }
